# pei_task

./: pyproject.toml
pei_data_task/: .gitignore  README.md  pyproject.toml
pei_data_task/src/: main.py
pei_data_task/src/data_quality/: missing_product_id.py
pei_data_task/src/sql_agg/: sales_agg.sql
pei_data_task/src/utils/: data_aggregate_utils.py  data_enrich_utils.py  data_utils.py
pei_data_task/tests/: test_data_utils.py
src/utils/: data_aggregate_utils.py  data_enrich_utils.py
