[project]
name = "pei-data-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Karthikeyan Mohan"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pyspark = "^4.0.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
